force-app/main/default/objects/FieloEE__RewardItem__c/FieloEE__RewardItem__c.object-meta.xml
<CustomObject>
    <description>Stock of each reward.</description>
    <label>Reward Item</label>
    <nameField>
        <displayFormat>IT {00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reward Item</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>