force-app/main/default/objects/FieloEE__RewardItem__c/fields/FieloEE__Code__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Code__c</fullName>
    <label>Code</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>