force-app/main/default/objects/FieloEE__RewardItem__c/fields/FieloEE__IsCondenser__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__IsCondenser__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsCondenser</label>
    <type>Checkbox</type>
</CustomField>