force-app/main/default/objects/FieloEE__RewardItem__c/fields/FieloEE__RedemptionItem__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__RedemptionItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Redemption Item</label>
    <referenceTo>FieloEE__RedemptionItem__c</referenceTo>
    <relationshipName>Items</relationshipName>
    <type>Lookup</type>
</CustomField>