force-app/main/default/objects/FieloEE__RewardItem__c/fields/FieloEE__Reward__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Reward__c</fullName>
    <label>Reward</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>FieloEE__Reward__c.FieloEE__Intangible__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>FieloEE__Reward__c</referenceTo>
    <relationshipName>Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>