force-app/main/default/objects/FieloEE__RewardItem__c/fields/FieloEE__Status__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Status__c</fullName>
    <description>"Available" means the reward can be redeemed.
"Unavailable" means the voucher is already used.
"Canceled" is when the voucher is expired.
"Pending" is when the redemption is closed and the voucher was not used.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Available</fullName>
                <default>true</default>
                <label>Available</label>
            </value>
            <value>
                <fullName>Unavailable</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Cancel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>